--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ button:hover {
     background: #005fa3;
 }
 
-.sidebar {
+.sidebar, .user-box {
+    color: #fff;
     padding: 20px;
     background: #1c2b3a !important;
     border-radius: 5px;
